samples/_failures_safe/1761365445_b01617_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94bc39b0.c: In function ‘main’:
./samples/SAFE/__tmp_94bc39b0.c:144:13: error: ‘str’ undeclared (first use in this function)
  144 |         if (str
      |             ^~~
./samples/SAFE/__tmp_94bc39b0.c:144:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_94bc39b0.c:144:16: error: expected ‘)’ at end of input
  144 |         if (str
      |            ~   ^
      |                )
./samples/SAFE/__tmp_94bc39b0.c:144:9: error: expected declaration or statement at end of input
  144 |         if (str
      |         ^~
./samples/SAFE/__tmp_94bc39b0.c:144:9: error: expected declaration or statement at end of input
